# mdk-devel

./: .hgignore
mdk/autoTest/: 1VariablenKonstanten-test.m23test  1deleteClient.m23test  1demo-utf8.html  1demo.html  1demo.md  1demo.odt  1demo.sh  1demo.txt  1installDeinstallMidnightCommander.m23test  1m23UCSclient-distro-install.m23test  1m23client-distro-install.m23test  1m23client-installiert.m23test  1m23client.m23test  1m23server-OVA_aus_ISO.m23test  1m23server-RaspBerryPi-SD-vorbereiten.m23test  1m23server-aktualisieren.m23test  1m23server-auf-UCS-installieren.m23test  1m23server-auf-UCS-mit-UCS-Testrepoinstallieren.m23test  1m23server-auf-debian-installieren.m23test  1m23server-auf-raspbian-installieren.m23test  1m23server-installiert.m23test  1m23server-iso-install.m23test  1m23serverBasicTest.m23test  1runTests.sh  1xml-beschreibung.html  1xml-beschreibung.md  1xml-beschreibung.odt  1xml-beschreibung.sh  aTS-Debian9-amd64.sh  aTS-Debian9-i386.sh  aTS-UCS4.3-LokalesTestrepo.sh  aTS-UCS4.4-LokalesTestrepo.sh  aTS-atISOm23Server.sh  blah  (+9 more)
mdk/m23helper/fstabnew/fstabnew/: Makefile  Makefile.am  Makefile.in  fstab  fstabnew  main.cpp  main.cpp.ohnedesktop  make.sh
mdk/m23helper/fstabnew/fstabnew/.deps/: main.Po
mdk/m23helper/fstabnew/fstabnew/docs/: Makefile  Makefile.in
mdk/m23helper/fstabnew/fstabnew/docs/en/: Makefile  Makefile.in
mdk/m23helper/mdoc/mdoc/: Makefile  Makefile.am  Makefile.in  main.cpp
mdk/m23helper/mdoc/mdoc/.deps/: main.Po
mdk/m23helper/mdoc/mdoc/docs/: Makefile  Makefile.in
mdk/m23helper/mdoc/mdoc/docs/en/: Makefile  Makefile.in
(+5311 files in other folders)
