####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = fstabnew

## INCLUDES were found outside kdevelop specific part

fstabnew_SOURCES = main.cpp 
fstabnew_LDADD   = 


EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
fstabnew_LDFLAGS = $(all_libraries) 
                                                                                
