####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = mdoc

## INCLUDES were found outside kdevelop specific part

mdoc_SOURCES = main.cpp 
mdoc_LDADD   = 


EXTRA_DIST = main.cpp 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
mdoc_LDFLAGS = $(all_libraries) 
                                                                                
